issue-33: Variable-ised z-index for consistency and robust use:

--- a/src/components/main-navigation/_main-navigation.scss
+++ b/src/components/main-navigation/_main-navigation.scss
@@ -9,7 +9,7 @@
   transform: translateX(-100%);
   visibility: hidden;
   outline: none;
-  z-index: 9999;
+  z-index: map-get($z-index, middle);
 
   &.is-opening,
   &.is-open {
